Fixed: Wrong width of .scrollable container with pinned tabs on the left

--- a/src/styles/themes/default/scroll-box.styl
+++ b/src/styles/themes/default/scroll-box.styl
@@ -81,7 +81,7 @@
 #root[data-pinned-tabs-position="left"]
 #root[data-pinned-tabs-position="right"]
   .ScrollBox > .scroll-container > .scrollable
-    width: calc(100vw - var(--tabs-pinned-width))
+    width: calc(100vw - var(--tabs-pinned-width) - 1px)
 #root[data-nav-layout="vertical"]
   .ScrollBox > .scroll-container > .scrollable
     width: calc(100vw - var(--nav-btn-width))
